--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="android.king.demo.MainActivity">
+        <activity android:name="android.king.signature.GridPaintActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
